# fm-comment-graphrag

./: -  .env.example  .gitignore  README.md  aqua.yaml  justfile  main.py  memo.md  pyproject.toml
cli/: get_news.py  main.py
config/: setting.py
data/: fetchdata.py
outputs/: graph.gexf
outputs/embedding_projector/: news_docs_metadata.tsv  news_docs_vectors.tsv
src/GraphRAG/: main.py
src/RAG/: main.py
src/cli/: GraphRAG_fmcomment.py  RAG_fmcomment.py  get_news.py  main.py
src/common/: load_news_documents.py  prompt.yml  rag_common.py  read_prompt.py
src/data/: news_data_range.py  plot_chart.py  yfinance_data.py
