[project]
name = "rag_vs_graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphrag==2.4.0",
    "langchain>=0.3.27",
    "langchain-community==0.3.20",
    "langchain-experimental>=0.3.4",
    "langchain-neo4j>=0.4.0",
    "langchain-openai>=0.3.34",
    "neo4j>=5.25,<6",
    "networkx>=3.5",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "typer>=0.16.1",
    "yfinance>=0.2.66",
]
